--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,9 @@ text-decoration: none;
 font-style: normal;
 color: currentColor;
 }
-
+.list{
+    list-style: none;
+}
 body{
 font-family:"Roboto", sans-serif;
 font-weight: 400;
@@ -80,14 +82,19 @@ font-family: 'Raleway', sans-serif;
     font-weight: 700;
     color: var(--light-text-color);
     font-size: 56px;
-    line-height: 1.071;
+    line-height: 1.07;
     text-align: center;
+    letter-spacing: 0.02em;
 }
 
 .hero-button{
+    font-family: inherit;
     background-color: var(--primary-brand-color);
     letter-spacing: 0.04;
     font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     color:var(--light-text-color);
     cursor: pointer;
 }
@@ -108,6 +115,7 @@ line-height: 1.2;
     font-size: 36px;
     line-height: 1.111;
     text-align: center;
+    letter-spacing: 0.02em;
 }
 
 .card-titles.team{
