--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ color: currentColor;
 }
 .list{
     list-style: none;
+    text-decoration: none;
 }
 body{
 font-family:"Roboto", sans-serif;
@@ -49,17 +50,12 @@ font-family: 'Raleway', sans-serif;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
-.logo-studio{
+.logo-studio-dark{
     color:var(--dark-brand-color-text);
-        font-family: 'Raleway', sans-serif;
-        font-weight: 800;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
+      
 }
 
-.logo-footer
+.logo-studio-light
 {
     color: var(--logo-footer-color);
 }
