--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ letter-spacing: 0.02em;
 color: var(--light-footer-text);
 }
 .section-buttons{
-    font-family: inherit;
+    font-family: "Roboto",sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
